--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: ['3.x', '16.x', '18.x', '19.x']
+        node-version: ['16.x', '18.x', '19.x']
 
     steps:
     - name: Checkout code
