--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: ['16.x', '18.x', '19.x']
+        node-version: ['3.x', '16.x', '18.x', '19.x']
 
     steps:
     - name: Checkout code
@@ -20,7 +20,11 @@ jobs:
         node-version: ${{ matrix.node-version }}
         
     - name: Install dependencies
-      run: npm install
+      run: |
+        cd next-first-app-tuto
+        npm install
       
     - name: Run integration tests
-      run: npm run test:integration
+      run: |
+        cd next-first-app-tuto
+        npm run test:integration
