--- a/next-first-app-tuto/package.json
+++ b/next-first-app-tuto/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:integration": "cypress run"
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
@@ -19,6 +20,6 @@
     "tailwindcss": "3.3.1"
   },
   "devDependencies": {
-    "cypress": "^12.11.0"
+    "cypress": "^9.1.0"
   }
 }
